c.lib 1.203 (28.4.2008)

- Added 68k stubs to amiga_rexxvars.c for the OS4 build to use. The new code now
  works just about exactly like the amiga.lib RVI code used to do, which means
  that there is no artificial length limit for the number of characters a string
  retrieved may have, and the code is largely reentrant.

- To work around a bug in the Roadshow TCP/IP stack (since fixed), the waitselect()
  function now substitutes a 10 microsecond timeout for a zero length timeout.

- isatty() no longer crashes if passed a socket rather than a file.

- Rewrote the GetRexxVar()/SetRexxVar() functions (mostly) in 'C', using available
  code as a reference. The 68k stubs currently only work for the 68k version of
  the library, and a solution for the OS4 build still needs to be found. The code
  is currently untested, but it should be complete.

- The printf() family now ignores argument specifications, as in "%2$d %1$d",
  which are used for localization on some platforms. This is a non-standard
  feature and the way clib2 treats it for now is just intended to avoid
  trouble while performing the conversion.

- [tboeckel]: when compiling amiga_rexxvars.c for m68k/OS3 the GetRexxVarFromMsg()
  and SetRexxVarFromMsg() can no longer cause linkage errors if the header files
  predate the SDK for OS 3.5.

- [jlangner]: the log() and log10() functions always returned -inf() even if the
  arguments was within the valid range for a log() function. Using DBL_EPSILON as
  the threshold was not correct as EPSILON is 2.2204460492503131E-16 whereas
  values like 1E-200 are still valid double values for a log().


c.lib 1.202 (16.1.2007)

- Added llrint() function contributed by Henning Nielsen Lund. Thank you
  very much!

- <unistd.h> now also include <stdio.h>, so that the SEEK_SET, etc. macros
  are defined for lseek() to use.

- Added a wrapper function which handles the thread-safe stdio stream
  resolution.
